2004-06-25  Not Zed  <NotZed@Ximian.com>

	** See bug #60354.

	* mail-component.c (view_changed_cb): set the shell window title
	as well.
	(impl_createView): renamed from createControls, just return a
	EComponentView instead.

2004-06-25  Not Zed  <NotZed@Ximian.com>

	* em-folder-tree.c (folder_tree_new): set search column.  #60152.

2004-06-24  Rodney Dawes  <dobey@novell.com>

	* em-utils.c (em_utils_add_address): Add code to set the parent,
	position, and type hint of the "Add address" dialog

	Fixes #60030

2004-06-23  Not Zed  <NotZed@Ximian.com>

	** See #54030.

	* e-searching-tokenizer.c (e_searching_tokenizer_match_count):
	only return a count if we're using the primary search string.

	* em-format-html-display.c (efhd_search_response): set the primary
	search string to NULL instead of resetting it.
	(efhd_update_search): dont noop if we have a null search text,
	just set an empty search.

	* e-searching-tokenizer.c (e_searching_tokenizer_reset): remove
	this, revert jeff's fixes for 54030.  this is incomplete and so
	doesn't work either (search text stays remembered and secondary
	search text lost too).

	** See #60523.

	* em-folder-view.c (emfv_finalise): unhook the folder changed
	before destroying the async thing, and move it all to destroy
	event anyway.
	(emfv_destroy): as above.

2004-06-22  Jeffrey Stedfast  <fejj@novell.com>

	* em-folder-tree-model.c (sort_cb): Same as below.
	(em_folder_tree_model_remove_folders): Same.

	* em-folder-tree.c (emft_maybe_expand_row): As toshok discovered,
	gtk_tree_model_get() strdup's string arguments, *sigh*, so we need
	to free them.
	(tree_drag_data_delete): Same.
	(tree_drag_data_get): Same.
	(tree_drag_data_received): Same.
	(emft_drop_target): Same
	(em_folder_tree_get_selected_uris): Same.
	(get_selected_uris_path_iterate): Same.
	(emft_update_model_expanded_state): Same.
	(emft_tree_row_expanded): Same.
	(emft_tree_row_activated): Same.
	(emft_popup_delete_response): Same.