@@ -1,3 +1,7 @@
+2004-06-28  Not Zed  <NotZed@Ximian.com>
+
+	* mail-component.c (impl_createView, view_changed_cb): api updates.
+
 2004-06-25  Not Zed  <NotZed@Ximian.com>
 
 	** See bug #60354.
